// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Snapshots should match a snapshot with a title 1`] = `
<div
  className="bg-white rounded shadow-lg"
>
  <div
    className="flex flex-row items-center"
  >
    <div
      className="flex-1"
    >
      <h4
        className="p-4 uppercase text-red-light"
      >
        Some title
      </h4>
      <div
        className="px-4 pb-4"
      >
        Some content!
      </div>
    </div>
  </div>
</div>
`;

exports[`Card Snapshots should match the default snapshot 1`] = `
<div
  className="bg-white rounded shadow-lg"
>
  <div
    className="flex flex-row items-center"
  >
    <div
      className="flex-1"
    >
      <div
        className="px-4 pb-4"
      >
        Some content!
      </div>
    </div>
  </div>
</div>
`;
